# grpc-tts

./: .dockerignore  .gitignore  LICENSE  README.md  restart_k8s.sh  run_k8s.sh
.github/workflows/: ci.yml
api_service/: Dockerfile  requirements.txt
api_service/app/: main.py  schemas.py  tts_client.py  validation.py
k8s/: api-deployment.yaml  api-service.yaml  tts-deployment.yaml  tts-service.yaml
proto/: tts.proto
qt_client/: CMakeLists.txt
qt_client/src/: MainWindow.cpp  MainWindow.h  main.cpp
tests/: conftest.py
tests/api_service/: test_main.py  test_tts_client.py  test_validation.py
tests/tts_service/: test_server.py  test_synthesizer.py
tts-service/: Dockerfile  requirements.txt
tts-service/app/: server.py  synthesizer.py
